[package]
name = "keeper-server"
version = "0.1.0"
authors = ["Joshua M. Clulow <josh@sysmgr.org>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1"
getopts = "0.2"
dropshot = "0.5.1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
slog = "2.5"
schemars = { version = "0.8", features = [ "chrono", "uuid" ] }
hyper = "0.14"
toml = "0.5"
chrono = "0.4"
keeper-common = { path = "../common" }
