[package]
name = "keeper-server"
version = "0.1.0"
edition = "2021"

[dependencies]
keeper-common = { path = "../common" }

anyhow = { workspace = true }
chrono = { workspace = true }
dropshot = { workspace = true }
getopts = { workspace = true }
hyper = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
