[package]
name = "keeper-submit"
version = "0.1.0"
authors = ["Joshua M. Clulow <josh@sysmgr.org>"]
edition = "2018"

[dependencies]
keeper-openapi = { path = "../openapi" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1"
anyhow = "1"
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4"
reqwest = { version = "^0.10", default-features = false, features = ["json"]}
keeper-common = { path = "../common" }
dirs = "2"
