[package]
name = "keeper-submit"
version = "0.1.0"
authors = ["Joshua M. Clulow <josh@sysmgr.org>"]
edition = "2018"

[dependencies]
keeper-openapi = { path = "../openapi" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
reqwest = { version = "^0.11", default-features = false, features = ["json", "native-tls-vendored"]}
keeper-common = { path = "../common" }
dirs = "2"
