[package]
name = "keeper-submit"
version = "0.1.0"
edition = "2021"

[dependencies]
keeper-common = { path = "../common" }
keeper-openapi = { path = "../openapi" }

anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
